# cpr_onav_description

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: gazebo_ptz_controllers.launch
meshes/: starter_kit.stl  swiftnav_antenna.stl  xvn_orig.stl
scripts/: husky_observer_envars.bash  husky_starter_kit_envars.bash  jackal_starter_kit_envars.bash  warthog_starter_kit_envars.bash
urdf/: empty.urdf  husky_observer.urdf.xacro  outdoornav_description.urdf.xacro  standard_kit.urdf.xacro  starter_kit.urdf.xacro
urdf/accessories/: 3d_lidar.urdf.xacro  axis_q62.urdf.xacro  d435_gazebo.urdf.xacro  gnss_antenna.urdf.xacro  hokuyo_ust10.urdf.xacro  sick_lms1xx_mount.urdf.xacro
